fixed z-index for affiliates

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -252,5 +252,3 @@ ul#related_gov_forms
   top: 25px
   right: 8px
 
-.ui-autocomplete
-  text-align: left
