--- a/app/stylesheets/sayt.sass
+++ b/app/stylesheets/sayt.sass
@@ -1,39 +1,3 @@
-.ac_results
-  padding: 0px
-  background: #fff
-  z-index: 99999
-
-  ul
-    width: 100%
-    list-style: none
-    padding: 0
-    margin: 0
-    border: 1px solid #888
-
-  li
-    margin: 0px
-    padding: 3px
-    cursor: default
-    display: block
-    font: menu
-    font-size: 12px
-    text-align: left
-
-
-.ac_loading
-  background: white right center no-repeat
-
-.ac_over
-  background-color: #ffb
-
-.ac_results ul strong.highlight
-  color: #800
-  margin: 0
-  padding: 0
-  
 .ui-autocomplete
-  font-weight: bold
-
-.sayt_highlight
-  font-weight:normal
-  color:#444
+  z-index: 100
+  text-align: left
